pip install pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Install Application
       run: |
         python setup.py install
+        pip install pytest
     - name: Run Tests
       run: |
         cd tests
