--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - python/load-cache
       - run:
-          command: make test
+          command: make test-ci
           name: Run tests
 
 workflows:
