--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,16 @@ jobs:
     steps:
       - checkout
       - run:
-          command: make test-ci
+          command: pip install pytest
+          name: Install pytest
+      - run:
+          command: cd tests
+          name: Navigate to tests directory
+      - run:
+          command: cd tests && python utils/init_db.py
+          name: Initialize test database
+      - run:
+          command: cd tests && python -m pytest
           name: Run tests
 
 workflows:
