--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
     executor: python/default
     steps:
       - checkout
-      - dist
+      - python/dist
       - run:
           command: pip install pytest
           name: Install pytest
