--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  python: circleci/python@0.2.1
+  python: circleci/python@1.3.2
 
 jobs:
   lint:
@@ -18,26 +18,15 @@ jobs:
     executor: python/default
     steps:
       - checkout
-      - run:
-          command: python -m venv venv
-          name: Create venv
-      - run:
-          command: . venv/bin/activate
-          name: Activate venv
-      - run:
-          command: python setup.py install
-          name: Install crazyimports
+      - python/dist
       - run:
           command: pip install pytest
           name: Install pytest
       - run:
-          command: cd tests
-          name: Navigate to tests directory
-      - run:
-          command: cd tests && python utils/init_db.py
+          command: python tests/utils/init_db.py
           name: Initialize test database
       - run:
-          command: cd tests && python -m pytest
+          command: python -m pytest
           name: Run tests
 
 workflows:
