--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Install Application
       run: |
         python setup.py install
-        pip install pytest
+        pip install -r requirements-dev.txt;
     - name: Run Tests
       run: |
         python tests/utils/init_db.py
