--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,16 +2,32 @@ appdirs==1.4.4
 attrs==20.3.0
 black==20.8b1
 click==7.1.2
+future==0.18.2
 iniconfig==1.1.1
+Jinja2==2.11.2
+joblib==1.0.0
+livereload==2.6.3
+lunr==0.5.8
+Markdown==3.3.3
+MarkupSafe==1.1.1
+mkdocs==1.1.2
+mkdocs-material==6.1.7
+mkdocs-material-extensions==1.0.1
 mypy-extensions==0.4.3
+nltk==3.5
 packaging==20.8
 pathspec==0.8.1
 pluggy==0.13.1
 py==1.10.0
+Pygments==2.7.3
+pymdown-extensions==8.0.1
 pyparsing==2.4.7
 pytest==6.2.1
 PyYAML==5.3.1
 regex==2020.11.13
+six==1.15.0
 toml==0.10.2
+tornado==6.1
+tqdm==4.54.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
