--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,10 +21,5 @@ nav:
   - Contributing: 'contributing.md'
   - Credits: 'credits.md'
 markdown_extensions:
-  - toc:
-      permalink: true
-  - markdown.extensions.codehilite:
-      guess_lang: false
-  - admonition
-  - codehilite
-  - extra
+  - pymdownx.highlight
+  - pymdownx.superfences
