--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,32 @@ on:
     branches: [ main ]
   release:
     types: [ created ]
+  schedule:
+    - cron: '0 0 * * 6'
 
 jobs:
-  code-style-check:
+  check-code-security:
+    name: Analyze
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python' ]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v1
+      with:
+        languages: ${{ matrix.language }}
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v1
+  
+  check-code-style:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
