--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,8 @@ jobs:
         pip install -r requirements-test.txt;
     - name: Run Tests
       run: |
-        python tests/utils/init_db.py
+        mkdir tests/test_data/generated/
+        python tests/utils/init_data.py
         python -m pytest
 
   publish:
