--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Test Application
       run: |
-        python3 -m venv venv
+        python -m venv venv
         . venv/bin/activate
         pip install -r requirements-test.txt
         mkdir tests/test_data/generated/
