--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,7 @@ jobs:
         with:
           python-version: 3.7
       - name: Check code style
-        run: |
-          pip install black
-          black --check .
+        run: make ci-lint
 
   test:
     runs-on: ${{ matrix.os }}
@@ -54,11 +52,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Test Application
-      run: |
-        pip install -r requirements-test.txt
-        mkdir tests/test_data/generated/
-        python tests/utils/init_data.py
-        python -m pytest
+      run: make ci-test
 
   publish:
     needs:
@@ -77,11 +71,7 @@ jobs:
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+      run: make ci-publish
 
   publish-docs:
     needs:
@@ -93,8 +83,4 @@ jobs:
         with:
           python-version: 3.x
       - name: Publish docs
-        run: |
-          pip install mkdocs-material
-          cp README.md docs/index.md
-          cp CONTRIBUTING.md docs/contributing.md
-          mkdocs gh-deploy --force
+        run: make ci-publish-docs
