--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - CSV: 'examples/csv.md'
     - SQLite: 'examples/sqlite.md'
     - Pickle: 'examples/pickle.md'
+    - TOML: 'examples/toml.md'
   - Contributing: 'contributing.md'
   - Credits: 'credits.md'
 markdown_extensions:
