get piter from git

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
 	"mkdocs-material==7.1.3",
 	"wheel",
 	"twine",
-	"mkdocs-material"
+	"mkdocs-material",
+	"git+https://github.com/mishankov/piter.git@main#egg=piter"
 ]
 scripts.lint = [
 	"black --check ."
