update piter stuff

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
           ${{ matrix.os }}-pip-
           ${{ matrix.os }}-
     - name: Check code style
-      run: pip install -r piter_envs/ci/dependencies.lock && piter run -e ci lint
+      run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci lint
 
   test:
     needs: build
@@ -108,7 +108,7 @@ jobs:
           ${{ matrix.os }}-pip-
           ${{ matrix.os }}-
     - name: Test Application
-      run: pip install -r piter_envs/ci/dependencies.lock && piter run -e ci test
+      run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci test
 
   publish:
     needs:
@@ -142,7 +142,7 @@ jobs:
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: pip install -r piter_envs/ci/dependencies.lock && piter run -e ci publish
+      run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci publish
 
   publish-docs:
     needs: publish
@@ -169,4 +169,4 @@ jobs:
           ${{ matrix.os }}-pip-
           ${{ matrix.os }}-
     - name: Publish docs
-      run: pip install -r piter_envs/ci/dependencies.lock && piter run -e ci publish-docs
+      run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci publish-docs
