less options for test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,10 @@ jobs:
     strategy:
         max-parallel: 4
         matrix:
-          python-version: [3.7, 3.8, 3.9, '3.10']
-          os: [ubuntu-latest, macOS-latest, windows-latest]
+          # python-version: [3.7, 3.8, 3.9, '3.10']
+          python-version: ['3.10']
+          # os: [ubuntu-latest, macOS-latest, windows-latest]
+          os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -88,8 +90,10 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        # python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: ['3.10']
+        # os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
