--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
         max-parallel: 4
         matrix:
-          python-version: [3.7, 3.8, 3.9, '3.10']
+          python-version: [3.7,'3.10']
           os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
     - uses: fusion-engineering/setup-git-credentials@v2
@@ -28,17 +28,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get pip cache dir
-      id: pip-cache
-      run: echo "::set-output name=dir::$(pip cache dir)"
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ matrix.os }}-pip-${{ hashFiles('requirements-test.txt') }}-${{ hashFiles('requirements-dev.txt') }}
-        restore-keys: |
-          ${{ matrix.os }}-pip-
-          ${{ matrix.os }}-
     - name: Install dependencies
       run: pip install -r piter_envs/ci/dependencies.lock
 
@@ -96,7 +85,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [3.7,'3.10']
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
     - uses: fusion-engineering/setup-git-credentials@v2
@@ -108,17 +97,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get pip cache dir
-      id: pip-cache
-      run: echo "::set-output name=dir::$(pip cache dir)"
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ matrix.os }}-pip-${{ hashFiles('requirements-test.txt') }}-${{ hashFiles('requirements-dev.txt') }}
-        restore-keys: |
-          ${{ matrix.os }}-pip-
-          ${{ matrix.os }}-
     - name: Test Application
       run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci test
 
@@ -143,17 +121,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get pip cache dir
-      id: pip-cache
-      run: echo "::set-output name=dir::$(pip cache dir)"
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ matrix.os }}-pip-${{ hashFiles('requirements-test.txt') }}-${{ hashFiles('requirements-dev.txt') }}
-        restore-keys: |
-          ${{ matrix.os }}-pip-
-          ${{ matrix.os }}-
     - name: Publish package
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
@@ -177,16 +144,5 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get pip cache dir
-      id: pip-cache
-      run: echo "::set-output name=dir::$(pip cache dir)"
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ matrix.os }}-pip-${{ hashFiles('requirements-test.txt') }}-${{ hashFiles('requirements-dev.txt') }}
-        restore-keys: |
-          ${{ matrix.os }}-pip-
-          ${{ matrix.os }}-
     - name: Publish docs
       run: pip install -r piter_envs/ci/dependencies.lock && piter env ci -i && piter run -e ci publish-docs
