--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,4 +1,5 @@
 attrs==21.2.0
+coverage==6.2
 iniconfig==1.1.1
 packaging==20.9
 pluggy==0.13.1
@@ -7,3 +8,4 @@ pyparsing==2.4.7
 pytest==6.2.4
 PyYAML==5.4.1
 toml==0.10.2
+tomli==1.2.2
