--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 appdirs==1.4.4
 attrs==21.2.0
-black==22.8.0
+black==21.5b1
 click==8.0.0
 future==0.18.2
 iniconfig==1.1.1
@@ -16,7 +16,7 @@ mkdocs-material-extensions==1.0.1
 mypy-extensions==0.4.3
 nltk==3.6.4
 packaging==20.9
-pathspec==0.9.0
+pathspec==0.8.1
 pluggy==0.13.1
 py==1.10.0
 Pygments==2.9.0
